[package]
name = "arkecosystem-client"
version = "1.0.0"
authors = ["Joshua Noack <joshua@ark.io>, Juan A. Martín <juan@ark.io>"]
description = "A simple Rust API client for the ARK Blockchain."
license = "MIT"
edition = "2018"

[lib]
name = "arkecosystem_client"
path = "src/lib.rs"
doctest = false

[dependencies]
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
mockito = "0.22.0"
assert_float_eq = "1.1.3"
