[package]
name = "arkecosystem-client"
version = "2.0.0"
authors = ["Joshua Noack <joshua@ark.io>, Kristjan Kosic <kristjan@ark.io>"]
description = "A simple Rust API client for the ARK Blockchain."
license = "MIT"
edition = "2018"

[lib]
name = "arkecosystem_client"
path = "src/lib.rs"
doctest = false

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rand = "*"

[dev-dependencies]
mockito = "0.22.0"

[features]
network_test = []
